src/objects/gfsc__Guidance_for_Success_Item__c.object
<CustomObject>
    <description>guidance for success items</description>
    <fields>
        <fullName>gfsc__Field_value__c</fullName>
        <description>Display this guidance when the object field has this value.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Field value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gfsc__Guidance_Title__c</fullName>
        <defaultValue>$Label.gfsc__default_title</defaultValue>
        <description>Guidance title</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gfsc__Guidance_content__c</fullName>
        <description>actual guidance</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Guidance for Success</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>gfsc__Guidance_for_Success__c</fullName>
        <description>Parent</description>
        <label>Guidance for Success</label>
        <referenceTo>gfsc__Guidance_for_Success__c</referenceTo>
        <relationshipLabel>Guidance for Success Item</relationshipLabel>
        <relationshipName>Guidance_for_Success_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>gfsc__Refresh_visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, A Process Builder will refresh  the visibility  by increasing the version number.</description>
        <label>Refresh visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gfsc__version__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the version number of the guidance. When this number is incremented, the guidance for success will be displayed again for those users that selected &quot;dont show this again&quot;</description>
        <label>version</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unique_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Guidance for Success Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Guidance for Success Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guidance for Success Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>